# -Repository

./: .env-example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yaml  main.py  models.py  pyproject.toml
.github/workflows/: linters.yaml
backend_api/: Dockerfile  pyproject.toml
backend_api/app/: .flake8  Makefile  app_factory.py  settings.py
backend_api/app/applications/auth/: auth_handler.py  router.py  security.py
backend_api/app/applications/users/: crud.py  models.py  router.py  schemas.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 2025_05_02_1806-6ab6d4623ec1_add_users_table.py
documentation/: mkdocs.yml
documentation/docs/: index.md  tasks.md
frontend/: Dockerfile  pyproject.toml
frontend/app/: app_factory.py  settings.py
frontend/app/backend_api/: api.py
frontend/app/routers/: main_page_router.py
frontend/app/templates/: index.html  login.html  register.html
frontend/app/templates/components/: base.html  login_comp.html  navbar.html
homeworks/: postgres.py
nginx/: nginx.conf
tests/: test_bank.py  test_bank_account.py  test_person.py  test_utils.py
utils/: utils.py
