[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = ""
authors = ["Vasyl <vasyl@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
