[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Vasyl <vasyl@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
